# trouwsite-app

./: .gitignore  Dockerfile  README.md  forms.py  pyproject.toml  requirements.txt  trouwsite.py  wsgi.py
static/: style.css
templates/: admin.html  faq.html  index.html  layout.html  layout_admin.html  location.html  login.html  planning.html  preferences.html  register.html  user.html
