[tool.poetry]
name = "trouwsite-app"
version = "0.1.0"
description = ""
authors = ["Kevin Pease <495973@student.saxion.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
bcrypt = "^3.2.0"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.0.26"
mysql-connector-python-rf = "^2.2.2"
Flask-Session = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Mail = "^0.9.1"
mysqlclient = "^2.0.3"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.26"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.3"
Flask-Limiter = "^2.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
